--- a/src/index.css
+++ b/src/index.css
@@ -17,21 +17,34 @@ h1 {
 }
 
 /** Loading **/
+.overlay {
+	display: none;
+	opacity: 0.5; 
+  background: #000; 
+  width: 100%;
+  height: 100%; 
+  z-index: 10;
+  top: 0; 
+  left: 0; 
+  position: fixed; 
+}
 
 .loader{
-  margin: 0 0 2em;
+	display: none;
+	position: absolute;
+	top: 50%;
+	left: 50%;
   height: 100px;
-  width: 20%;
+  width: 100px;
   text-align: center;
-  padding: 1em;
   margin: 0 auto 1em;
-  display: inline-block;
   vertical-align: top;
+  z-index: 20;
 }
 
 svg path,
 svg rect{
-  fill: #FF6700;
+  fill: #82CF6D;
 }
 
 /** Class Colors **/
