--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,26 @@ p {
 	font-weight: 100;
 }
 
+/** Page Transitions **/
+
+.page-enter {
+	opacity: 0.01;
+}
+
+.page-enter.page-enter-active {
+	opacity: 1;
+  transition: opacity 600ms ease-in;
+}
+
+.page-leave {
+	opacity: 1;
+}
+
+.page-leave.page-leave-active {
+	opacity: 0.01;
+  transition: opacity 600ms ease-in;
+}
+
 /** Loading **/
 .overlay {
 	display: none;
