--- a/src/index.css
+++ b/src/index.css
@@ -457,3 +457,19 @@ ul.talent-choices li {
 		border-radius: 0;
 	}
 }
+
+/** Footer **/
+footer {
+	color: #fff;
+	background-color: rgba(47,47,47,0.98);
+	box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12),0 3px 5px -1px rgba(0,0,0,0.3);
+	padding-top: 10px;
+}
+
+footer p {
+	font-size: 12px;
+}
+
+footer a, footer a:hover {
+	color: #fff;
+}
